feat: Adding run and test methods
