# controllers/apiv1tasksidrunController.js
@@ -1,0 +1,9 @@
+'use strict';
+
+var varapiv1tasksidrunController = require('./apiv1tasksidrunControllerService');
+
+
+module.exports.runTaskByid = function runTaskByid (req, res, next) {
+  varapiv1tasksidrunController.runTaskByid(req.swagger.params, res, next);
+};
+
