# controllers/apiv1taskstestController.js
@@ -1,0 +1,10 @@
+'use strict';
+
+var varapiv1taskstestController = require('./apiv1taskstestControllerService');
+
+
+module.exports.runTaskTest = function runTaskTest (req, res, next) {
+ 
+  varapiv1taskstestController.runTaskTest(req.swagger.params, res, next);
+};
+
